--- a/app/src/main/res/drawable/first_gradient.xml
+++ b/app/src/main/res/drawable/first_gradient.xml
@@ -3,5 +3,6 @@
  <gradient android:type="linear"
      android:angle="270"
      android:startColor="@color/crema"
-     android:endColor="@color/white" />
+     android:endColor="@color/white"
+     />
 </shape>
