--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,35 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/ImageView"
         android:layout_width="match_parent"
         android:layout_height="470dp"
         android:scaleType="fitXY"
-        android:src="@drawable/portales"
-        tools:ignore="MissingConstraints" />
+        android:src="@drawable/portales"/>
     
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Taqueria Los Portales is a quick, casual restaurant!"
+        android:text="@string/welcome_description"
+        android:textAlignment="center"
+        android:textColor="@color/verde"
+        android:textSize="15sp"
+        android:textStyle="italic"
         />
     
     <Button
+        android:id="@+id/getStartedButton"
         android:layout_width="219dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_button"
-        android:text="Get Started!" />
+        android:text="@string/button_start"
+        android:textColor="@color/white"
+
+        />
 
 </LinearLayout>
