--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/img1"
         android:layout_width="215dp"
         android:layout_height="65dp"
         android:src="@drawable/imagen1"
@@ -13,6 +14,7 @@
         android:layout_gravity="center"/>
 
     <EditText
+        android:id="@+id/name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name"
@@ -20,6 +22,7 @@
         android:layout_marginTop="@dimen/input_margin"/>
 
     <EditText
+        android:id="@+id/last_name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/last_name"
@@ -27,6 +30,7 @@
         android:layout_marginTop="@dimen/input_margin"/>
 
     <EditText
+        android:id="@+id/email_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/e_mail"
@@ -34,6 +38,7 @@
         android:layout_marginTop="@dimen/input_margin"/>
 
     <EditText
+        android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
@@ -41,12 +46,23 @@
         android:layout_marginTop="@dimen/input_margin"/>
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/terms"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="@dimen/input_margin"
         android:textStyle="italic"/>
+
+    <Button
+        android:id="@+id/getStartedButton"
+        android:layout_width="219dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_button"
+        android:text="@string/sign_in"
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
