--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="input_margin">15dp</dimen>
 
+    <dimen name="menu_buttons_paddings">20dp</dimen>
+    <dimen name="menu_buttons_margin">2dp</dimen>
+    <dimen name="menu_buttons_text">15dp</dimen>
 </resources>
